fix: reject overlapping spin, fixed trophy list

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3199,7 +3199,9 @@ Copyright (c) 2013 Daniel Eden
 
 .zoomOutLeft {
     -webkit-animation-name: zoomOutLeft;
-    animation-name: zoomOutLeft
+    animation-name: zoomOutLeft;
+    -webkit-animation-duration: 500ms;
+    animation-duration: 500ms;
 }
 
 @-webkit-keyframes zoomOutRight {
